# inkline

./: .gitignore  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
docs/: architecture.md  canonical-contract.md  canonical-non-semantic-policy.md  canonical-v2-bookgraph.md  display_block_architecture_review.md
docs/superpowers/plans/: 2026-07-01-phase3-text-unit-aggregation.md  2026-07-22-section-map.md  2026-07-23-page-review-golden-gate.md
docs/superpowers/specs/: 2026-07-23-page-review-golden-gate.md
tests/: test_block_merge.py  test_book_skeleton.py  test_book_skeleton_experiment_tool.py  test_book_skeleton_page_selection.py  test_book_skeleton_title_location.py  test_bookgraph_audit.py  test_bookgraph_audit_tool.py  test_bookgraph_golden_alignment_tool.py  test_bookgraph_golden_parity_tool.py  test_bookgraph_notes.py  test_bookgraph_projection.py  test_bookgraph_schema.py  test_bookgraph_shadow_path_compare.py  test_canonical_architecture_policy.py  test_canonical_package_structure.py  test_canonical_schema.py  test_cli.py  test_cross_page_text_unit_audit_tool.py  test_display_block_architecture.py  test_display_block_reconciliation.py  test_display_geometry.py  test_duplicate_helpers.py  test_epub_exporter.py  test_epub_figure_architecture.py  test_epub_importer.py  test_epub_module_architecture.py  test_epub_render_architecture.py  test_epub_table_render.py  test_figure_reconciliation.py  test_footnote_strip_marker.py  test_inline_note_ref_source.py  test_internal_canonical.py  test_internal_paragraph_boundary_audit_tool.py  test_middle_footnote_sources.py  test_mineru_asset_crops.py  test_mineru_bookgraph_shadow.py  test_mineru_builders.py  test_mineru_canonical_v2.py  test_mineru_cli_book_skeleton.py  test_mineru_normalize.py  (+30 more)
tools/: audit_bookgraph_golden_alignment.py  audit_bookgraph_shadow.py  audit_cross_page_text_units.py  audit_internal_paragraph_boundaries.py  audit_scoped_note_resolution.py  audit_text_unit_layout.py  check_bookgraph_golden_parity.py  check_display_block_architecture.py  check_page_review_golden.py  check_phase3_shadow_acceptance.py  check_silk_road_canonical.py  compare_bookgraph_shadow_paths.py  experiment_book_skeleton_inputs.py  run_page_review_golden_suite.py
