[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkline"
version = "0.1.0"
description = "Composable document parsing, canonical representation, EPUB export, and RAG pipeline."
requires-python = ">=3.11"
dependencies = ["inkline-cli>=0.1.0"]

[project.optional-dependencies]
rag = ["numpy>=1.26", "faiss-cpu>=1.8", "requests>=2.31"]
mineru = ["inkline-parser-mineru[mineru]>=0.1.0"]

[dependency-groups]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5",
  "ruff>=0.12",
  "pyright>=1.1",
  "bandit[toml]>=1.8",
  "pip-audit>=2.9",
  "pylint>=3.2",
]

[project.scripts]
inkline = "inkline.cli.main:main"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
inkline-cli = { workspace = true }
inkline-canonical = { workspace = true }
inkline-llm = { workspace = true }
inkline-parse = { workspace = true }
inkline-parser-mineru = { workspace = true }
inkline-epub = { workspace = true }
inkline-rag = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/inkline-canonical/src",
  "packages/inkline-llm/src",
  "packages/inkline-parse/src",
  "packages/inkline-parser-mineru/src",
  "packages/inkline-epub/src",
  "packages/inkline-rag/src",
  "packages/inkline-cli/src",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
  "packages/inkline-canonical/src",
  "packages/inkline-cli/src",
  "packages/inkline-epub/src",
  "packages/inkline-llm/src",
  "packages/inkline-parse/src",
  "packages/inkline-parser-mineru/src",
  "packages/inkline-rag/src",
  "tests",
]
extend-exclude = [".venv", ".ruff_cache", "build", "dist", "data", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "SIM", "RUF", "PLR0912", "PLR0914", "PLR0915"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

# Preview rules (unstable) - enable explicitly
preview = true
explicit-preview-rules = true

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 50

[tool.ruff.lint.isort]
known-first-party = ["inkline"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
  "packages/inkline-canonical/src",
  "packages/inkline-cli/src",
  "packages/inkline-epub/src",
  "packages/inkline-llm/src",
  "packages/inkline-parse/src",
  "packages/inkline-parser-mineru/src",
  "packages/inkline-rag/src",
  "tests",
]
exclude = [".venv", "build", "dist", "data", "outputs"]
extraPaths = [
  "packages/inkline-canonical/src",
  "packages/inkline-llm/src",
  "packages/inkline-parse/src",
  "packages/inkline-parser-mineru/src",
  "packages/inkline-epub/src",
  "packages/inkline-rag/src",
  "packages/inkline-cli/src",
]

[tool.bandit]
targets = ["packages"]
exclude_dirs = ["tests", ".venv", "build", "dist", "data", "outputs"]

[tool.pylint]
# Only enable C0302 (too-many-lines) - all other checks handled by Ruff
disable = "all"
enable = "C0302"
max-module-lines = 1000

[tool.pylint.format]
max-module-lines = 1000
